plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '5.2.0'
}

group 'dev.kingnaldo'
version '1.0'

java {
    sourceCompatibility = JavaVersion.VERSION_14
    targetCompatibility = JavaVersion.VERSION_14
}

shadowJar {
    manifest {
        attributes('Main-Class':'dev.kingnaldo.kingsbot.KingsBot')
    }
}

plugins.withType(JavaPlugin).configureEach {
    java {
        modularity.inferModulePath = true
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}

repositories {
    jcenter()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation('net.dv8tion:JDA:4.1.1_156') {
        exclude module: 'opus-java'
        exclude module: 'jackson-databind'
    }

    implementation('com.github.KingnaldoJr:lavaplayer:master') {
        exclude module: 'lava-common'
        exclude module: 'lavaplayer-natives'
    }
    implementation('com.sedmelluq:lava-common:1.1.0') {
        exclude module: 'lavaplayer'
        exclude module: 'lavaplayer-natives'
    }
    implementation('com.sedmelluq:lavaplayer-natives:1.3.13') {
        exclude module: 'lavaplayer'
        exclude module: 'lavaplayer-natives'
    }

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.0'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.13.3'

    implementation 'com.google.api-client:google-api-client:1.30.9'
    implementation 'com.google.apis:google-api-services-youtube:v3-rev20200526-1.30.9'

    implementation 'com.google.code.gson:gson:2.8.6'
}